Se volvieron a crear todas las clases y se completaron de acuerdo a lo que se tiene en la base de datos.